# NN-From-Scratch-Rust

./: Cargo.toml  docs.lnk
src/: main.rs  network.rs  random_dataset.rs
src/bnetwork_old/: activation.rs  layer.rs  loss.rs  mod.rs  network.rs  prelude.rs
src/wlearn/: layer.rs  loss.rs  mod.rs  model.rs  optimizer.rs
