[package]
name = "nn_from_scratch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.4"
ndarray-rand = "0.14.0"
ndarray-stats = "0.5.0"
plotters = "0.3.1"
tracing = {version = "0.1.29", features = ["release_max_level_warn"]}
tracing-subscriber = "0.3.5"